Commit inicial do projeto com documentação

--- a/.env
+++ b/.env
@@ -10,3 +10,8 @@ JWT_SECRET=a45d21e80ce31bb98d119b77938bbfa3
 # REDIS_URL=redis://localhost:6379
 # URL do WebSocket
 WEBSOCKET_URL=wss://fivconnect.net/v2
+
+# Evolution API Configuration
+EVOLUTION_API_URL=http://localhost:8080
+EVOLUTION_API_KEY=BQYHJGJHJ
+EVOLUTION_WEBHOOK_URL=https://fivconnect.net/api/webhooks/evolution
