--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Porta backend
-PORT=3000
+PORT=3001
 # Banco de dados
 DATABASE_URL=postgresql://fivuser:FiVApp@localhost:5432/fivapp
 # Sessões
@@ -14,4 +14,4 @@ WEBSOCKET_URL=wss://fivconnect.net/v2
 # Evolution API Configuration
 EVOLUTION_API_URL=http://localhost:8080
 EVOLUTION_API_KEY=BQYHJGJHJ
-EVOLUTION_WEBHOOK_URL=https://fivconnect.net/api/webhooks/evolution
+EVOLUTION_WEBHOOK_URL=https://app.fivconnect.net/api/webhooks/evolution
